# tum_autoware_freespace_planner

./: CMakeLists.txt  README.md  package.xml
config/: freespace_planner.param.yaml  freespace_planner_.param.yaml  freespace_planner_with_references.param.yaml
doc/: .~lock.freespace_parameters.ods#  freespace_parameters.ods  freespace_planner.excalidraw
include/autoware/freespace_planner/: freespace_planner_node.hpp  utils.hpp
launch/: freespace_planner.launch.xml
schema/: freespace_planner.schema.json
scripts/: debug_plot.py  ros2_snapshot_bag.py  run_sim.sh  trajectory_selector_gui.py
src/autoware_freespace_planner/: freespace_planner_node.cpp  utils.cpp
test/: costmap_loader.hpp  costmap_visualization.hpp  rosbag_loader.hpp  rosbag_writer.hpp  test_astar_planner_remote.cpp  test_freespace_planner.cpp  test_freespace_planner_node_interface.cpp  test_freespace_planner_utils.cpp  yaml_param_loader.hpp
test/config/: planner_config.yaml
